--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -1960,7 +1960,7 @@
                                             <div class="relative inline-block">
                                                 <!-- Circular Background for Icon -->
                                                 <div
-                                                    class="mb-6 inline-flex items-center justify-center w-16 h-16 bg-white rounded-2xl shadow-sm text-blue-500">
+                                                    class="mb-6 mt-6">
                                                     <i
                                                         class="fas fa-hand-pointer text-2xl text-red-500 animate-bounce"></i>
                                                 </div>
